--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"host": "vite dev --host"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
