--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"mdsvex": "^0.11.0",
 		"svelte": "^4.2.7",
+		"svelte-preprocess-import-assets": "^1.1.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module"
